--- a/api/src/main/webapp/WEB-INF/cron_base.yaml
+++ b/api/src/main/webapp/WEB-INF/cron_base.yaml
@@ -1,6 +1,6 @@
 cron:
-- description: Periodic notebook runtime deletion due to age
-  url: "/v1/cron/deleteOldRuntimes"
+- description: 'Periodic notebook runtime deletion due to age > 2 weeks (1 week if idle)'
+  url: /v1/cron/deleteOldRuntimes
   schedule: every 3 hours
   timezone: UTC
   target: api
