switch to use RSTUDIO app type

--- a/api/src/main/resources/leonardo.yaml
+++ b/api/src/main/resources/leonardo.yaml
@@ -1496,6 +1496,7 @@ components:
         - CROMWELL
         - CUSTOM
         - GALAXY
+        - RSTUDIO
     AppStatus:
       type: string
       enum:
