--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -21,10 +21,7 @@
       "gce": ["test-gce-docker-image"],
       "dataproc": ["test-dataproc-docker-image"]
     },
-    "gceVmZone": "us-central1-c",
-    "userApps": {
-      "rStudioDescriptorPath": "https:\/\/raw.githubusercontent.com\/DataBiosphere\/terra-app\/39c602e20ba027eb065dcb7690e76f2236ac2848\/apps\/rstudio\/app.yaml"
-    }
+    "gceVmZone": "us-central1-c"
   },
   "billing": {
     "accountId": "013713-75CFF6-1751E5",
