--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -21,7 +21,10 @@
       "gce": [],
       "dataproc": []
     },
-    "gceVmZone": "us-central1-a"
+    "gceVmZone": "us-central1-a",
+    "userApps": {
+      "rStudioDescriptorPath": "https:\/\/raw.githubusercontent.com\/DataBiosphere\/terra-app\/39c602e20ba027eb065dcb7690e76f2236ac2848\/apps\/rstudio\/app.yaml"
+    }
   },
   "billing": {
     "accountId": "01DDC8-7ED304-6E46FE",
