--- a/api/config/cdr_config_local.json
+++ b/api/config/cdr_config_local.json
@@ -38,7 +38,7 @@
       "cdrVersionId": 2,
       "name": "Synthetic Dataset v2",
       "bigqueryProject": "fc-aou-cdr-synth-test",
-      "bigqueryDataset": "test_R2019q4r3_backup",
+      "bigqueryDataset": "SR2022Q4R6",
       "creationTime": "2019-09-30 00:00:00Z",
       "releaseNumber": 3,
       "numParticipants": 234525,
@@ -51,7 +51,7 @@
       "cdrVersionId": 3,
       "name": "Synthetic Dataset v3",
       "bigqueryProject": "fc-aou-cdr-synth-test",
-      "bigqueryDataset": "test_R2019q4r3_backup",
+      "bigqueryDataset": "SR2022Q4R6",
       "creationTime": "2019-09-30 00:00:00Z",
       "releaseNumber": 3,
       "numParticipants": 234525,
@@ -79,7 +79,7 @@
       "cdrVersionId": 5,
       "name": "Synthetic Dataset in the Controlled Tier v3",
       "bigqueryProject": "fc-aou-cdr-synth-test-2",
-      "bigqueryDataset": "test_R2019q4r3_backup",
+      "bigqueryDataset": "SR2022Q4R6",
       "wgsBigqueryDataset": "1kg_wgs_2022q1",
       "wgsFilterSetName": "example",
       "creationTime": "2020-08-26 00:09:51Z",
@@ -112,7 +112,7 @@
       "isDefault": false,
       "name": "Outdated CT CDR",
       "bigqueryProject": "fc-aou-cdr-synth-test-2",
-      "bigqueryDataset": "test_R2019q4r3",
+      "bigqueryDataset": "SR2022Q4R6",
       "creationTime": "2020-08-26 00:09:51Z",
       "releaseNumber": 3,
       "numParticipants": 234525,
@@ -124,7 +124,7 @@
       "isDefault": true,
       "name": "Synthetic Dataset in the Controlled Tier v4",
       "bigqueryProject": "fc-aou-cdr-synth-test-2",
-      "bigqueryDataset": "test_R2019q4r3",
+      "bigqueryDataset": "SC2022Q4R6",
       "wgsBigqueryDataset": "1kg_wgs_2022q1",
       "wgsFilterSetName": "example",
       "creationTime": "2020-08-26 00:09:51Z",
@@ -146,7 +146,7 @@
       "isDefault": true,
       "name": "Synthetic Dataset v4",
       "bigqueryProject": "fc-aou-cdr-synth-test",
-      "bigqueryDataset": "test_R2019q4r3",
+      "bigqueryDataset": "SR2022Q4R6",
       "creationTime": "2019-09-30 00:00:00Z",
       "releaseNumber": 7,
       "numParticipants": 234525,
