updated .gitmodules to pull from branch for tanagra added set max_connections=300 to enable both aoU and tanagra to play well

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,4 @@
 [submodule "tanagra"]
 	path = tanagra
 	url = https://github.com/DataBiosphere/tanagra
+	branch = chenchals/DT-412-Revisit-common-schema-files
