--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -6817,7 +6817,7 @@ definitions:
   AppLocalizeRequest:
     type: object
     required:
-    - notebookNames
+    - fileNames
     - playgroundMode
     properties:
       fileNames:
