--- a/ui/package.json
+++ b/ui/package.json
@@ -83,8 +83,10 @@
     "yarn": "^1.22.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "12.1.4",
+    "@testing-library/user-event": "^14.4.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
