[DT-383][risk=no] Deploy Tanagra UI locally with RW (#7705)
* DT-383 add commands for local tanagra ui deploy

--- a/ui/package.json
+++ b/ui/package.json
@@ -6,9 +6,11 @@
     "build-terra-deps": "./src/terraui/build.sh",
     "deps": "yarn run codegen && yarn run build-terra-deps",
     "start": "BROWSER='none' PORT=4200 react-app-rewired start",
+    "start-tanagra": "npm run codegen --prefix ../tanagra/ui && npm install --prefix ../tanagra/ui && BROWSER='none' npm start --prefix ../tanagra/ui",
     "dev-up": "yarn && yarn run deps && yarn start",
     "dev-up-test": "yarn && yarn run deps && REACT_APP_ENVIRONMENT=localtest yarn start",
     "dev-up-local": "yarn && yarn run deps && REACT_APP_ENVIRONMENT=local yarn start",
+    "dev-up-tanagra-local": "concurrently \"yarn run start-tanagra\" \"yarn run dev-up-local\"",
     "build": "react-app-rewired build",
     "test:debug": "react-app-rewired --inspect-brk test --watchAll=false --run-in-band",
     "test": "react-app-rewired test --watchAll=false",
@@ -90,6 +92,7 @@
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
+    "concurrently": "^8.0.1",
     "enzyme": "^3.11.0",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.6.0",
