Add checkbox to show all files and not just jupyter/rstudio files

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -1755,6 +1755,10 @@ paths:
   "/v1/admin/workspaces/{workspaceNamespace}/files":
     parameters:
       - "$ref": "#/parameters/workspaceNamespace"
+      - in: query
+        name: allFiles
+        type: boolean
+        required: false
     get:
       tags:
         - workspaceAdmin
