PR Comments: use AppFiles switch rather than allFiles and UI Changes

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -1756,7 +1756,7 @@ paths:
     parameters:
       - "$ref": "#/parameters/workspaceNamespace"
       - in: query
-        name: allFiles
+        name: onlyAppFiles
         type: boolean
         required: false
     get:
