--- a/e2e/package.json
+++ b/e2e/package.json
@@ -79,5 +79,8 @@
     "typescript": "^4.1.2",
     "wait-for-expect": "^3.0.2",
     "winston": "^3.3.3"
+  },
+  "resolutions": {
+    "semver": "^7.5.2"
   }
 }
