--- a/e2ev2/package.json
+++ b/e2ev2/package.json
@@ -12,5 +12,8 @@
     "jest-silent-reporter": "0.5.0",
     "jsonwebtoken": "9.0.0",
     "puppeteer-core": "19.2.0"
+  },
+  "resolutions": {
+    "semver": "^7.5.2"
   }
 }
