--- a/e2e/package.json
+++ b/e2e/package.json
@@ -81,6 +81,7 @@
     "winston": "^3.3.3"
   },
   "resolutions": {
-    "semver": "^7.5.2"
+    "semver": "^7.5.2",
+    "word-wrap" : "npm:@aashutoshrathi/word-wrap@^1.2.3"
   }
 }
