--- a/ui/package.json
+++ b/ui/package.json
@@ -113,6 +113,6 @@
     "node-fetch": "^2.6.7",
     "nth-check": "^2.0.1",
     "semver": "^7.5.2",
-    "word-wrap" : "npm:@aashutoshrathi/word-wrap@^1.2.3"
+    "word-wrap": "aashutoshrathi/word-wrap"
   }
 }
